# postit-rs

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .tarpaulin.toml  Cargo.toml  LICENSE-APACHE  README.md  tarpaulin.toml
.github/workflows/: build.yml  ci.yml  coverage.yml
src/: error.rs  lib.rs  main.rs
src/config/: configuration.rs  error.rs  mod.rs
src/core/: action.rs  args.rs  cli.rs  config.rs  error.rs  examples.rs  handler.rs  macros.rs  mod.rs  postit.rs  task.rs  todo.rs
src/core/models/: mod.rs  task.rs  todo.rs
src/docs/: command.rs  example.rs  flag.rs  mod.rs
src/fs/: csv.rs  file.rs  json.rs  mod.rs  traits.rs
src/models/: task.rs  todo.rs
src/persisters/: error.rs  mod.rs  traits.rs
src/persisters/base/: file.rs  mod.rs  orm.rs
src/persisters/db/: error.rs  mod.rs  mongo.rs  orm.rs  sqlite.rs
src/persisters/fs/: csv.rs  error.rs  file.rs  json.rs  mod.rs  xml.rs
tests/: mocks.rs  mod.rs
tests/config/: configuration.rs
tests/core/: action.rs  args.rs  config.rs  handler.rs  mod.rs  postit.rs  task.rs  todo.rs
tests/core/models/: task.rs  todo.rs
tests/docs/: command.rs  flag.rs  mod.rs
tests/fs/: csv.rs  file.rs  json.rs  mod.rs
tests/models/: task.rs  todo.rs
tests/persisters/: mod.rs  traits.rs
tests/persisters/base/: file.rs
tests/persisters/db/: mod.rs  mongo.rs  orm.rs  sqlite.rs
tests/persisters/fs/: csv.rs  file.rs  json.rs  mod.rs  xml.rs
