[package]
name = "postit"
version = "0.1.0"
edition = "2021"
authors = ["cristianmarcosmartin1@gmail.com"]
description = "Task manager on your CLI."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/keruDev/postit-rs"
keywords = ["cli", "productivity", "todo-list"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", default-features = false, features = [
	"std",
	"derive",
	"help",
	"usage",
	"error-context",
	"suggestions",
] }
colored = "2.1.0"

[[bin]]
name = "postit"
path = "src/main.rs"