[package]
name = "postit"
version = "0.2.3"
edition = "2021"
authors = ["cristianmarcosmartin1@gmail.com"]
description = "Task manager on your CLI."
license = "MIT OR Apache-2.0"
repository = "https://github.com/kerudev/postit-rs"
documentation = "https://docs.rs/postit/"
keywords = ["cli", "productivity", "todo-list"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
colored = "2.1.0"
clap = { version = "4.5", default-features = false, features = [
	"std",
	"derive",
	"help",
	"usage",
	"error-context",
	"suggestions",
] }
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
quick-xml = { version = "0.37.2", features = ["serialize"] }
sqlite = "0.36.1"
mongodb = { version = "3.2.3", features = ["sync"] }
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"

[[bin]]
name = "postit"
path = "src/main.rs"

[[test]]
name = "unittest"
path = "tests/mod.rs"
